<resources>

    <!-- Default -->
    <string name="app_name">Alva Messenger</string>
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Fechar menu</string>
    <!-- Inputs Strings -->
    <string name="error_empty">Campo Vazio!</string>
    <string name="error_validate_email">Ops! Algo de errado com o email.</string>
    <string name="error_validate_password">Ops! Sua senha precisa de letras maúsculas, minúsculas e números.</string>
    <string name="error_validate_password_length">Sua senha precisa ter mais de 6 dígitos!</string>
    <string name="error_validate_password_confirm">Senhas diferentes!</string>
    <string name="error_validate_firstname_and_lastname">Escreva corretamente!</string>
    <!-- Splash Screen -->
    <string name="logo_description">Logotipo da Alva Mensseger</string>
    <!-- Sign in -->
    <string name="text_sign_in">Entrar</string>
    <string name="button_sign_in_with_mail">Entrar com o email</string>
    <string name="text_or">ou</string>
    <string name="button_sign_in_with_google">Entrar com google</string>
    <string name="button_create_user">Não tem conta ainda? Criar conta agora</string>
    <!-- Login -->
    <string name="ic_login_description">Ícone representativo de um usuário voltando a logar no aplicativo da Alva Mensseger!</string>
    <string name="text_login_welcome_app">Bem-vindo(a) de volta!</string>
    <string name="label_login_email">Email</string>
    <string name="label_login_password">Senha</string>
    <string name="button_login_sign_in">Entrar</string>
    <!-- Sign up -->
    <string name="ic_sign_up_description">Ícone representativo do potencial de conexão de usuários de todo o mundo!</string>
    <string name="text_sign_up_welcome_app">Cadastre-se e conecte-se com o mundo!</string>
    <string name="label_section_user_info">Informações pessoais</string>
    <string name="label_sign_up_first_name">Nome</string>
    <string name="label_sign_up_last_name">Sobrenome</string>
    <string name="label_section_account_info">Conta</string>
    <string name="label_sign_up_email">Email</string>
    <string name="label_sign_up_password">Senha</string>
    <string name="label_sign_up_confirm_password">Confirme a senha</string>
    <string name="button_sign_up">Cadastrar</string>
    <!-- Home -->
    <string name="menu_item_account">Conta</string>
    <string name="menu_item_logout">Sair</string>
    <!-- Home - chats -->
    <string name="toolbar_title_chat">Conversas</string>
    <!-- Chat -->
    <string name="label_input_message">Menssagem…</string>
    <!-- Friends -->
    <string name="toolbar_title_friends">Meus Amigos</string>
    <string name="btn_open_add_friend_dialog">Adicionar novo amigo!</string>
    <!-- Add Friends Dialog -->
    <string name="title_dialog">Digite o email do seu novo amigo!</string>
    <string name="title_input_email_friend_dialog">Email do usuário</string>
    <string name="btn_dismiss_dialog">Cancelar</string>
    <string name="btn_add_friend_dialog">Adicionar</string>

</resources>
